--- a/src/dashboard/public/index.html
+++ b/src/dashboard/public/index.html
@@ -13,5 +13,6 @@
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+    <script type="text/javascript" src="https://unpkg.com/procedural-gl/build/procedural-gl.js"></script>
   </body>
 </html>
